err/bintut.err
Listing '.'...
Listing './bin'...
Compiling './bin/readelf.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BinTut-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/Pat-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/atpublic-1.0.egg-info'...
Listing './lib/python3.5/site-packages/bintut'...
Listing './lib/python3.5/site-packages/bintut/courses'...
Listing './lib/python3.5/site-packages/bintut/courses/targets'...
Listing './lib/python3.5/site-packages/capstone'...
Listing './lib/python3.5/site-packages/capstone-3.0.4.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/elftools'...
Listing './lib/python3.5/site-packages/elftools/common'...
Listing './lib/python3.5/site-packages/elftools/construct'...
Listing './lib/python3.5/site-packages/elftools/construct/lib'...
Listing './lib/python3.5/site-packages/elftools/dwarf'...
Listing './lib/python3.5/site-packages/elftools/elf'...
Listing './lib/python3.5/site-packages/filebytes'...
Listing './lib/python3.5/site-packages/filebytes-0.9.13.egg-info'...
Listing './lib/python3.5/site-packages/flufl'...
Listing './lib/python3.5/site-packages/flufl/i18n'...
Listing './lib/python3.5/site-packages/flufl/i18n/docs'...
Listing './lib/python3.5/site-packages/flufl/i18n/testing'...
Listing './lib/python3.5/site-packages/flufl/i18n/testing/messages'...
Listing './lib/python3.5/site-packages/flufl/i18n/testing/messages/xx'...
Listing './lib/python3.5/site-packages/flufl/i18n/testing/messages/xx/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/flufl/i18n/testing/messages/yy'...
Listing './lib/python3.5/site-packages/flufl/i18n/testing/messages/yy/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/flufl/i18n/tests'...
Listing './lib/python3.5/site-packages/flufl.i18n-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/fn'...
Listing './lib/python3.5/site-packages/fn/immutable'...
Listing './lib/python3.5/site-packages/fn-0.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pat'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/public'...
Listing './lib/python3.5/site-packages/public/tests'...
Listing './lib/python3.5/site-packages/pyelftools-0.24.egg-info'...
Listing './lib/python3.5/site-packages/pyperclip'...
Listing './lib/python3.5/site-packages/pyperclip-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/ropper'...
Listing './lib/python3.5/site-packages/ropper/common'...
Listing './lib/python3.5/site-packages/ropper/loaders'...
Compiling './lib/python3.5/site-packages/ropper/parser.py'...
***   File "./lib/python3.5/site-packages/ropper/parser.py", line 41
    
    ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/ropper/printer'...
Listing './lib/python3.5/site-packages/ropper/ropchain'...
Listing './lib/python3.5/site-packages/ropper/ropchain/arch'...
Listing './lib/python3.5/site-packages/ropper-1.11.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
